Renamed to better describe correct values.